samples/_failures_safe/1761419835_080c29_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_22d373f8.c: In function ‘print_token’:
./samples/SAFE/__tmp_22d373f8.c:177:12: error: missing terminating " character
  177 |     printf("Line %d,
      |            ^~~~~~~~~
./samples/SAFE/__tmp_22d373f8.c:177:5: error: expected expression at end of input
  177 |     printf("Line %d,
      |     ^~~~~~
./samples/SAFE/__tmp_22d373f8.c:177:5: error: expected declaration or statement at end of input
